--- a/.github/workflows/insights.yml
+++ b/.github/workflows/insights.yml
@@ -1,7 +1,7 @@
 name: Insights
 on:
   schedule: 
-    - cron: "0 */4 * * *"
+    - cron: "0 0 * * *"
   workflow_dispatch:
   push:
     branches:
@@ -18,12 +18,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: data
-
-      - name: Install jq
-        run: sudo apt-get update && sudo apt-get install -y jq
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
       
       - name: generate GitHub metric
         uses: lowlighter/metrics@latest
@@ -37,14 +31,9 @@ jobs:
           optimize: svg
           experimental_features: --optimize-svg
           config_timezone: Asia/Taipei
-          base_indepth: yes
           plugin_languages: yes
-          plugin_languages_indepth: yes
-          plugin_languages_sections: recently-used
-          plugin_languages_recent_load: 1000
-          plugin_languages_recent_days: 365
-          plugin_languages_analysis_timeout: 60
-          plugin_languages_details: percentage, lines
+          plugin_languages_sections: most-used
+          plugin_languages_details: bytes-size, percentage
           plugin_lines: yes
           plugin_lines_history_limit: 0
           plugin_traffic: yes
